--- a/website/index.html
+++ b/website/index.html
@@ -276,6 +276,50 @@
         </div>
     </section>
 
+    <section class="features" id="download" style="border-top: 1px solid var(--border);">
+        <h2>Get Mobium</h2>
+        <div class="feature-grid">
+            <div class="feature-card">
+                <div class="feature-icon">🐧</div>
+                <h3>Linux</h3>
+                <p>.deb and .AppImage available. Requires WebKit2GTK.</p>
+                <a href="https://github.com/beebis/mobium/releases/latest" class="btn btn-primary" style="margin-top:1rem;display:inline-block;font-size:0.9rem;padding:0.6rem 1.5rem;">Download .deb</a>
+            </div>
+            <div class="feature-card">
+                <div class="feature-icon">🪟</div>
+                <h3>Windows</h3>
+                <p>.msi installer. Windows 10/11 with WebView2.</p>
+                <a href="https://github.com/beebis/mobium/releases/latest" class="btn btn-primary" style="margin-top:1rem;display:inline-block;font-size:0.9rem;padding:0.6rem 1.5rem;">Download .msi</a>
+            </div>
+            <div class="feature-card">
+                <div class="feature-icon">🍎</div>
+                <h3>macOS</h3>
+                <p>.dmg bundle. macOS 11+ with Xcode CLI tools.</p>
+                <a href="https://github.com/beebis/mobium/releases/latest" class="btn btn-primary" style="margin-top:1rem;display:inline-block;font-size:0.9rem;padding:0.6rem 1.5rem;">Download .dmg</a>
+            </div>
+        </div>
+        <div style="text-align:center;margin-top:2rem;">
+            <p style="color:var(--muted);font-size:0.9rem;">Or build from source:</p>
+            <code style="display:inline-block;background:var(--bg2);border:1px solid var(--border);border-radius:8px;padding:0.75rem 1.5rem;color:var(--text);font-size:0.85rem;margin-top:0.5rem;">git clone https://github.com/beebis/mobium && cd mobium/client && npm install && npm run tauri build</code>
+        </div>
+    </section>
+
+    <section class="features" id="self-host" style="border-top: 1px solid var(--border);">
+        <h2>Self-Host</h2>
+        <div style="max-width:700px;margin:0 auto;">
+            <div class="feature-card">
+                <p style="color:var(--text);font-size:0.95rem;line-height:1.8;">
+                    <strong>1.</strong> Clone and build the server:<br>
+                    <code style="background:var(--bg);padding:0.2rem 0.5rem;border-radius:4px;font-size:0.85rem;">git clone https://github.com/beebis/mobium && cd mobium && cargo build --release -p mobium-server</code><br><br>
+                    <strong>2.</strong> Configure and run:<br>
+                    <code style="background:var(--bg);padding:0.2rem 0.5rem;border-radius:4px;font-size:0.85rem;">cp .env.example .env && mkdir -p data && ./target/release/mobium-server</code><br><br>
+                    <strong>3.</strong> Point your client at <code style="background:var(--bg);padding:0.1rem 0.4rem;border-radius:4px;font-size:0.85rem;">ws://your-ip:8443</code> — that's it.
+                </p>
+            </div>
+            <p style="color:var(--muted);font-size:0.85rem;text-align:center;margin-top:1rem;">Runs on a Raspberry Pi. ~9MB RAM. Zero config database.</p>
+        </div>
+    </section>
+
     <footer>
         <p>Mobium — MIT / Apache-2.0 · <a href="https://github.com/beebis/mobium">Source Code</a></p>
     </footer>
