fix: update GitHub links to tarpy7/mobium

--- a/website/index.html
+++ b/website/index.html
@@ -173,7 +173,7 @@
             <a href="#features">Features</a>
             <a href="#security">Security</a>
             <a href="#tech">Tech</a>
-            <a href="https://github.com/beebis/mobium">GitHub</a>
+            <a href="https://github.com/tarpy7/mobium">GitHub</a>
         </div>
     </nav>
 
@@ -283,24 +283,24 @@
                 <div class="feature-icon">🐧</div>
                 <h3>Linux</h3>
                 <p>.deb and .AppImage available. Requires WebKit2GTK.</p>
-                <a href="https://github.com/beebis/mobium/releases/latest" class="btn btn-primary" style="margin-top:1rem;display:inline-block;font-size:0.9rem;padding:0.6rem 1.5rem;">Download .deb</a>
+                <a href="https://github.com/tarpy7/mobium/releases/latest" class="btn btn-primary" style="margin-top:1rem;display:inline-block;font-size:0.9rem;padding:0.6rem 1.5rem;">Download .deb</a>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">🪟</div>
                 <h3>Windows</h3>
                 <p>.msi installer. Windows 10/11 with WebView2.</p>
-                <a href="https://github.com/beebis/mobium/releases/latest" class="btn btn-primary" style="margin-top:1rem;display:inline-block;font-size:0.9rem;padding:0.6rem 1.5rem;">Download .msi</a>
+                <a href="https://github.com/tarpy7/mobium/releases/latest" class="btn btn-primary" style="margin-top:1rem;display:inline-block;font-size:0.9rem;padding:0.6rem 1.5rem;">Download .msi</a>
             </div>
             <div class="feature-card">
                 <div class="feature-icon">🍎</div>
                 <h3>macOS</h3>
                 <p>.dmg bundle. macOS 11+ with Xcode CLI tools.</p>
-                <a href="https://github.com/beebis/mobium/releases/latest" class="btn btn-primary" style="margin-top:1rem;display:inline-block;font-size:0.9rem;padding:0.6rem 1.5rem;">Download .dmg</a>
+                <a href="https://github.com/tarpy7/mobium/releases/latest" class="btn btn-primary" style="margin-top:1rem;display:inline-block;font-size:0.9rem;padding:0.6rem 1.5rem;">Download .dmg</a>
             </div>
         </div>
         <div style="text-align:center;margin-top:2rem;">
             <p style="color:var(--muted);font-size:0.9rem;">Or build from source:</p>
-            <code style="display:inline-block;background:var(--bg2);border:1px solid var(--border);border-radius:8px;padding:0.75rem 1.5rem;color:var(--text);font-size:0.85rem;margin-top:0.5rem;">git clone https://github.com/beebis/mobium && cd mobium/client && npm install && npm run tauri build</code>
+            <code style="display:inline-block;background:var(--bg2);border:1px solid var(--border);border-radius:8px;padding:0.75rem 1.5rem;color:var(--text);font-size:0.85rem;margin-top:0.5rem;">git clone https://github.com/tarpy7/mobium && cd mobium/client && npm install && npm run tauri build</code>
         </div>
     </section>
 
@@ -310,7 +310,7 @@
             <div class="feature-card">
                 <p style="color:var(--text);font-size:0.95rem;line-height:1.8;">
                     <strong>1.</strong> Clone and build the server:<br>
-                    <code style="background:var(--bg);padding:0.2rem 0.5rem;border-radius:4px;font-size:0.85rem;">git clone https://github.com/beebis/mobium && cd mobium && cargo build --release -p mobium-server</code><br><br>
+                    <code style="background:var(--bg);padding:0.2rem 0.5rem;border-radius:4px;font-size:0.85rem;">git clone https://github.com/tarpy7/mobium && cd mobium && cargo build --release -p mobium-server</code><br><br>
                     <strong>2.</strong> Configure and run:<br>
                     <code style="background:var(--bg);padding:0.2rem 0.5rem;border-radius:4px;font-size:0.85rem;">cp .env.example .env && mkdir -p data && ./target/release/mobium-server</code><br><br>
                     <strong>3.</strong> Point your client at <code style="background:var(--bg);padding:0.1rem 0.4rem;border-radius:4px;font-size:0.85rem;">ws://your-ip:8443</code> — that's it.
@@ -321,7 +321,7 @@
     </section>
 
     <footer>
-        <p>Mobium — MIT / Apache-2.0 · <a href="https://github.com/beebis/mobium">Source Code</a></p>
+        <p>Mobium — MIT / Apache-2.0 · <a href="https://github.com/tarpy7/mobium">Source Code</a></p>
     </footer>
 </body>
 </html>
