legal: remove all Signal/Discord trademark references from code, docs, and website

--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#6c5ce7">
     <!-- OG -->
     <meta property="og:title" content="Mobium — Communication that stays yours">
-    <meta property="og:description" content="End-to-end encrypted messaging with Signal Protocol. Zero-knowledge server. Self-hostable on a Raspberry Pi.">
+    <meta property="og:description" content="End-to-end encrypted messaging. Zero-knowledge server. Zero-knowledge server. Self-hostable on a Raspberry Pi.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://107.130.61.253">
     <!-- Favicon (inline SVG) -->
@@ -193,7 +193,7 @@
 
     <!-- Hero -->
     <section class="hero">
-        <div class="protocol-badge">Signal Protocol · Zero Knowledge</div>
+        <div class="protocol-badge">E2E Encrypted · Zero Knowledge</div>
         <h1>Communication<br>that <span>stays yours</span></h1>
         <p>End-to-end encrypted messaging, voice, and file sharing. The server is blind by design — it routes encrypted blobs and nothing more.</p>
         <div class="cta-group">
@@ -210,7 +210,7 @@
             <div class="card">
                 <div class="card-icon">💬</div>
                 <h3>Encrypted DMs</h3>
-                <p>Signal Double Ratchet with forward secrecy. Every message gets a unique key. Compromise one, the rest stay safe.</p>
+                <p>Double Ratchet with forward secrecy. Every message gets a unique key. Compromise one, the rest stay safe.</p>
             </div>
             <div class="card">
                 <div class="card-icon">📢</div>
@@ -348,12 +348,12 @@
         <div style="max-width: 700px; margin: 0 auto;">
             <h2 style="text-align:center;font-size:2rem;margin-bottom:3rem;">FAQ</h2>
             <div class="faq-item">
-                <div class="faq-q">How is this different from Discord?</div>
-                <div class="faq-a">Discord can read every message you send. Mobium encrypts everything client-side before it leaves your device. The server is mathematically unable to decrypt your content.</div>
+                <div class="faq-q">How is this different from mainstream chat platforms?</div>
+                <div class="faq-a">Mainstream platforms can read every message you send. Mobium encrypts everything client-side before it leaves your device. The server is mathematically unable to decrypt your content.</div>
             </div>
             <div class="faq-item">
-                <div class="faq-q">How is this different from Signal?</div>
-                <div class="faq-a">Mobium uses the same Signal Protocol but adds Discord-like features: persistent channels, voice chat rooms, screen sharing, and server-based message history. And you can self-host.</div>
+                <div class="faq-q">How is this different from other encrypted messengers?</div>
+                <div class="faq-a">Mobium uses the same proven cryptographic primitives but adds community features: persistent channels, voice chat rooms, screen sharing, and server-based message history. And you can self-host.</div>
             </div>
             <div class="faq-item">
                 <div class="faq-q">What if I lose my device?</div>
