fix: create GitHub release with ARM64 artifacts, update download links

--- a/website/index.html
+++ b/website/index.html
@@ -302,20 +302,20 @@
                 <div class="card dl-card">
                     <div class="card-icon">🐧</div>
                     <h3>Linux</h3>
-                    <p>.deb and .AppImage</p>
-                    <a href="https://github.com/tarpy7/mobium/releases/latest" class="btn btn-primary btn-sm">Download</a>
+                    <p>.deb (ARM64) · More architectures coming soon</p>
+                    <a href="https://github.com/tarpy7/mobium/releases/latest/download/Mobium_0.1.0_arm64.deb" class="btn btn-primary btn-sm">Download .deb</a>
                 </div>
                 <div class="card dl-card">
                     <div class="card-icon">🪟</div>
                     <h3>Windows</h3>
-                    <p>.msi installer</p>
-                    <a href="https://github.com/tarpy7/mobium/releases/latest" class="btn btn-primary btn-sm">Download</a>
+                    <p>Coming soon</p>
+                    <a href="https://github.com/tarpy7/mobium/releases/latest" class="btn btn-secondary btn-sm">View Releases</a>
                 </div>
                 <div class="card dl-card">
                     <div class="card-icon">🍎</div>
                     <h3>macOS</h3>
-                    <p>.dmg bundle</p>
-                    <a href="https://github.com/tarpy7/mobium/releases/latest" class="btn btn-primary btn-sm">Download</a>
+                    <p>Coming soon</p>
+                    <a href="https://github.com/tarpy7/mobium/releases/latest" class="btn btn-secondary btn-sm">View Releases</a>
                 </div>
             </div>
             <div style="text-align:center;margin-top:2.5rem;">
