feat: all platform downloads live — Linux/Windows/macOS links on website

--- a/website/index.html
+++ b/website/index.html
@@ -302,20 +302,22 @@
                 <div class="card dl-card">
                     <div class="card-icon">🐧</div>
                     <h3>Linux</h3>
-                    <p>.deb (ARM64) · More architectures coming soon</p>
-                    <a href="https://github.com/tarpy7/mobium/releases/latest/download/Mobium_0.1.0_arm64.deb" class="btn btn-primary btn-sm">Download .deb</a>
+                    <p>.deb · .AppImage · x86_64 + ARM64</p>
+                    <a href="https://github.com/tarpy7/mobium/releases/latest/download/Mobium-linux-x86_64.deb" class="btn btn-primary btn-sm">Download .deb</a>
+                    <a href="https://github.com/tarpy7/mobium/releases/latest/download/Mobium-linux-x86_64.AppImage" class="btn btn-secondary btn-sm" style="margin-top:0.5rem;">.AppImage</a>
                 </div>
                 <div class="card dl-card">
                     <div class="card-icon">🪟</div>
                     <h3>Windows</h3>
-                    <p>Coming soon</p>
-                    <a href="https://github.com/tarpy7/mobium/releases/latest" class="btn btn-secondary btn-sm">View Releases</a>
+                    <p>.msi installer · x86_64</p>
+                    <a href="https://github.com/tarpy7/mobium/releases/latest/download/Mobium-windows-x86_64.msi" class="btn btn-primary btn-sm">Download .msi</a>
+                    <a href="https://github.com/tarpy7/mobium/releases/latest/download/Mobium-windows-x86_64-setup.exe" class="btn btn-secondary btn-sm" style="margin-top:0.5rem;">.exe installer</a>
                 </div>
                 <div class="card dl-card">
                     <div class="card-icon">🍎</div>
                     <h3>macOS</h3>
-                    <p>Coming soon</p>
-                    <a href="https://github.com/tarpy7/mobium/releases/latest" class="btn btn-secondary btn-sm">View Releases</a>
+                    <p>.dmg · Apple Silicon</p>
+                    <a href="https://github.com/tarpy7/mobium/releases/latest/download/Mobium-macos-aarch64.dmg" class="btn btn-primary btn-sm">Download .dmg</a>
                 </div>
             </div>
             <div style="text-align:center;margin-top:2.5rem;">
